packages/libs/error-stack/tests/snapshots/test_debug__linear@glyph.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---

Printable C
│ 📌 tests/test_debug.rs:172:10
├─▶ Context B
│   ╰ 📌 tests/test_debug.rs:171:10
├─▶ Printable B
│   ╰ 📌 tests/test_debug.rs:169:10
├─▶ Context A
│   ╰ 📌 tests/test_debug.rs:168:10
├─▶ Printable A
│   ╰ 📌 tests/test_debug.rs:165:10
├─▶ Root error
│   ╰ 📌 tests/common.rs:140:5
╰─▶ 3 additional attachments

