packages/libs/error-stack/tests/snapshots/test_debug__linear@spantrace-backtrace-glyph.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
Context B
├╴tests/test_debug.rs:222:10
├╴Printable C
│
├─▶ Context A
│   ├╴tests/test_debug.rs:219:10
│   ├╴Printable B
│   ├╴1 additional attachment
│
╰─▶ Root error
    ├╴tests/common.rs:147:5
    ├╴Printable A
    ├╴spantrace with 2 frames (1)
    ├╴backtrace with [n] frames (1)
    ╰╴2 additional attachments
