packages/libs/error-stack/tests/snapshots/test_debug__linear_ext@backtrace-glyph.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:#?}\"))"
---
Context B
├╴tests/test_debug.rs:239:10
├╴Printable C
│
├─▶ Context A
│   ├╴tests/test_debug.rs:236:10
│   ├╴Printable B
│   ├╴1 additional attachment
│
╰─▶ Root error
    ├╴tests/common.rs:147:5
    ├╴Printable A
    ├╴backtrace with [n] frames (1)
    ╰╴2 additional attachments

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Backtrace No. 1
   [redacted]
