packages/libs/error-stack/tests/snapshots/test_debug__linear_ext@backtrace.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:#?}\")"
---

Printable C
| @ tests/test_debug.rs:185:10
|-> Context B
|   > @ tests/test_debug.rs:184:10
|-> Printable B
|   > @ tests/test_debug.rs:182:10
|-> Context A
|   > @ tests/test_debug.rs:181:10
|-> Printable A
|   > @ tests/test_debug.rs:178:10
|-> Root error
|   > @ tests/common.rs:140:5
|-> backtrace with 12 frames (1)
|   > @ tests/common.rs:140:5
\-> 3 additional attachments


━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Backtrace No. 1
   0: std::backtrace_rs::backtrace::libunwind::trace
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/std/src/../../backtrace/src/backtrace/mod.rs:66:5
   1: std::backtrace_rs::backtrace::trace_unsynchronized
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/std/src/../../backtrace/src/backtrace/mod.rs:66:5
   2: std::backtrace::Backtrace::create
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/std/src/backtrace.rs:328:13
   3: error_stack::report::Report<C>::new
             at ./src/report.rs:242:18
   4: test_debug::common::create_report
             at ./tests/common.rs:140:5
   5: test_debug::linear_ext
             at ./tests/test_debug.rs:177:18
   6: test_debug::linear_ext::{{closure}}
             at ./tests/test_debug.rs:174:1
   7: core::ops::function::FnOnce::call_once
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/core/src/ops/function.rs:248:5
   8: core::ops::function::FnOnce::call_once
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/core/src/ops/function.rs:248:5
   9: test::__rust_begin_short_backtrace
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/test/src/lib.rs:572:5
  10: <alloc::boxed::Box<F,A> as core::ops::function::FnOnce<Args>>::call_once
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/alloc/src/boxed.rs:1934:9
  11: <core::panic::unwind_safe::AssertUnwindSafe<F> as core::ops::function::FnOnce<()>>::call_once
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/core/src/panic/unwind_safe.rs:271:9
  12: std::panicking::try::do_call
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/std/src/panicking.rs:492:40
  13: std::panicking::try
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/std/src/panicking.rs:456:19
  14: std::panic::catch_unwind
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/std/src/panic.rs:137:14
  15: test::run_test_in_process
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/test/src/lib.rs:595:18
  16: test::run_test::run_test_inner::{{closure}}
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/test/src/lib.rs:489:39
  17: test::run_test::run_test_inner::{{closure}}
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/test/src/lib.rs:516:37
  18: std::sys_common::backtrace::__rust_begin_short_backtrace
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/std/src/sys_common/backtrace.rs:122:18
  19: std::thread::Builder::spawn_unchecked_::{{closure}}::{{closure}}
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/std/src/thread/mod.rs:505:17
  20: <core::panic::unwind_safe::AssertUnwindSafe<F> as core::ops::function::FnOnce<()>>::call_once
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/core/src/panic/unwind_safe.rs:271:9
  21: std::panicking::try::do_call
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/std/src/panicking.rs:492:40
  22: std::panicking::try
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/std/src/panicking.rs:456:19
  23: std::panic::catch_unwind
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/std/src/panic.rs:137:14
  24: std::thread::Builder::spawn_unchecked_::{{closure}}
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/std/src/thread/mod.rs:504:30
  25: core::ops::function::FnOnce::call_once{{vtable.shim}}
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/core/src/ops/function.rs:248:5
  26: <alloc::boxed::Box<F,A> as core::ops::function::FnOnce<Args>>::call_once
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/alloc/src/boxed.rs:1934:9
  27: <alloc::boxed::Box<F,A> as core::ops::function::FnOnce<Args>>::call_once
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/alloc/src/boxed.rs:1934:9
  28: std::sys::unix::thread::Thread::new::thread_start
             at /rustc/c396bb3b8a16b1f2762b7c6078dc3e023f6a2493/library/std/src/sys/unix/thread.rs:108:17
  29: __pthread_deallocate
